--- a/assets/css/components/boardroom-members-sidebar.css
+++ b/assets/css/components/boardroom-members-sidebar.css
@@ -1,6 +1,6 @@
-/* chatroom-members-sidebar.css - Compiled from _chatroom-members-sidebar.scss */
+/* boardroom-members-sidebar.css - Compiled from _boardroom-members-sidebar.scss */
 
-.chatroom-members-sidebar {
+.boardroom-members-sidebar {
   background: #fff;
   border-right: 1px solid #dee2e6;
   height: 100dvh;
@@ -15,16 +15,16 @@
   overflow: hidden;
 }
 
-.chatroom-members-header {
+.boardroom-members-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.chatroom-members-title {
+.boardroom-members-title {
   margin: 0;
 }
 
-.chatroom-members-section {
+.boardroom-members-section {
   padding: 1rem;
 }
