--- a/assets/css/components/boardroom-message-input.css
+++ b/assets/css/components/boardroom-message-input.css
@@ -1,6 +1,6 @@
-/* chatroom-message-input.css - Compiled from _chatroom-message-input.scss */
+/* boardroom-message-input.css - Compiled from _boardroom-message-input.scss */
 
-.chatroom-message-input {
+.boardroom-message-input {
   color: #6c757d;
   display: flex;
   justify-content: flex-start;
@@ -15,7 +15,7 @@
   z-index: 10;
 }
 
-.chatroom-message-input-avatar {
+.boardroom-message-input-avatar {
   width: 40px !important;
   height: 40px !important;
   aspect-ratio: 1 / 1 !important;
@@ -25,23 +25,23 @@
   overflow: hidden;
 }
 
-.chatroom-message-input-field {
+.boardroom-message-input-field {
   flex: 1 1 auto;
   font-size: 1.25rem;
   margin-left: 1rem;
   margin-right: 1rem;
 }
 
-.chatroom-message-input-attach {
+.boardroom-message-input-attach {
   margin-left: 0.25rem;
   color: #6c757d;
 }
 
-.chatroom-message-input-emoji {
+.boardroom-message-input-emoji {
   margin-left: 0.75rem;
   color: #6c757d;
 }
 
-.chatroom-message-input-send {
+.boardroom-message-input-send {
   margin-left: 0.75rem;
 }
