--- a/assets/css/components/boardroom-section.css
+++ b/assets/css/components/boardroom-section.css
@@ -1,6 +1,6 @@
-/* chatroom-section.css - Compiled from _chatroom-section.scss */
+/* boardroom-section.css - Compiled from _boardroom-section.scss */
 
-.chatroom-boardroom-container {
+.boardroom-boardroom-container {
   width: 100%;
   min-height: 100%;
   height: 100%;
@@ -11,7 +11,7 @@
   flex-direction: column;
 }
 
-.chatroom-section {
+.boardroom-section {
   background-color: #FFFFFF;
   flex: 1 1 auto;
   display: flex;
@@ -20,7 +20,7 @@
   min-height: 0;
 }
 
-.chatroom-container-fluid {
+.boardroom-container-fluid {
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 0;
