--- a/assets/css/components/boardroom-utilities.css
+++ b/assets/css/components/boardroom-utilities.css
@@ -1,4 +1,4 @@
-/* chatroom-utilities.css - Compiled from _chatroom-utilities.scss */
+/* boardroom-utilities.css - Compiled from _boardroom-utilities.scss */
 
 #members {
   width: 100%;
