--- a/assets/css/components/boardroom-chat-area.css
+++ b/assets/css/components/boardroom-chat-area.css
@@ -1,6 +1,6 @@
-/* chatroom-chat-area.css - Compiled from _chatroom-chat-area.scss */
+/* boardroom-chat-area.css - Compiled from _boardroom-chat-area.scss */
 
-.chatroom-chat-area {
+.boardroom-chat-area {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -9,7 +9,7 @@
   min-width: 0;
 }
 
-.chatroom-chat-messages {
+.boardroom-chat-messages {
   flex: 1 1 0%;
   min-height: 0;
   max-height: 100%;
@@ -19,19 +19,19 @@
   padding-top: 1rem;
 }
 
-.chatroom-message-row {
+.boardroom-message-row {
   display: flex;
   flex-direction: row;
   margin-bottom: 0.5rem;
 }
-.chatroom-message-row-start {
+.boardroom-message-row-start {
   justify-content: flex-start;
 }
-.chatroom-message-row-end {
+.boardroom-message-row-end {
   justify-content: flex-end;
 }
 
-.chatroom-message-avatar {
+.boardroom-message-avatar {
   width: 40px !important;
   height: 40px !important;
   aspect-ratio: 1 / 1 !important;
@@ -45,31 +45,31 @@
   max-height: 40px !important;
 }
 
-.chatroom-message-text {
+.boardroom-message-text {
   font-size: 0.875rem;
   padding: 0.5rem 0.75rem;
   margin-bottom: 0.25rem;
   border-radius: 0.75rem;
 }
-.chatroom-message-text-received {
+.boardroom-message-text-received {
   background: #f8f9fa;
   margin-left: 0.75rem;
 }
-.chatroom-message-text-sent {
+.boardroom-message-text-sent {
   background: #0d6efd;
   color: #fff;
   margin-right: 0.75rem;
 }
 
-.chatroom-message-meta {
+.boardroom-message-meta {
   font-size: 0.875rem;
   border-radius: 0.75rem;
   color: #6c757d;
 }
-.chatroom-message-meta-received {
+.boardroom-message-meta-received {
   margin-left: 0.75rem;
   float: right;
 }
-.chatroom-message-meta-sent {
+.boardroom-message-meta-sent {
   margin-right: 0.75rem;
 }
