--- a/assets/css/components/boardroom-members-list.css
+++ b/assets/css/components/boardroom-members-list.css
@@ -1,24 +1,24 @@
-/* chatroom-members-list.css - List container and nav styles only. Member item styles are in chatroom-member-item.css */
+/* boardroom-members-list.css - List container and nav styles only. Member item styles are in boardroom-member-item.css */
 
-.chatroom-members-search-form {
+.boardroom-members-search-form {
   display: flex;
   border-radius: 0.375rem;
   margin: 0;
 }
 
-.chatroom-members-search-form-relative {
+.boardroom-members-search-form-relative {
   position: relative;
   width: 100%;
 }
 
-.chatroom-members-search-form-center {
+.boardroom-members-search-form-center {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
 
-.chatroom-members-search-input {
+.boardroom-members-search-input {
   border-radius: 0.375rem;
   flex: 1 1 auto;
   border: 1px solid #e0e0e0;
@@ -28,7 +28,7 @@
   padding-right: 2.5rem;
 }
 
-.chatroom-members-search-addon {
+.boardroom-members-search-addon {
   border: none;
   background: none;
   display: flex;
@@ -37,7 +37,7 @@
   margin-left: 0.5rem;
 }
 
-.chatroom-members-search-addon-absolute {
+.boardroom-members-search-addon-absolute {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -46,13 +46,13 @@
   z-index: 2;
 }
 
-.chatroom-members-list-nav {
+.boardroom-members-list-nav {
   position: relative;
   height: 400px;
   overflow-y: auto;
 }
 
-.chatroom-members-list {
+.boardroom-members-list {
   list-style: none;
   margin-bottom: 0;
   padding-left: 0;
