--- a/assets/css/components/boardroom-message-item.css
+++ b/assets/css/components/boardroom-message-item.css
@@ -1,5 +1,5 @@
-/* Styles for chatroom-message-item (names and roles below avatars) */
-.chatroom-message-avatar {
+/* Styles for boardroom-message-item (names and roles below avatars) */
+.boardroom-message-avatar {
   width: 40px;
   height: 40px;
   aspect-ratio: 1 / 1;
@@ -9,7 +9,7 @@
   overflow: hidden;
 }
 
-.chatroom-message-avatar-block {
+.boardroom-message-avatar-block {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,21 +17,21 @@
   margin-left: 0.5rem;
 }
 
-.chatroom-message-avatar-meta {
+.boardroom-message-avatar-meta {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 0.25rem;
 }
 
-.chatroom-message-avatar-name {
+.boardroom-message-avatar-name {
   font-size: 0.95em;
   font-weight: 600;
   color: #222;
   margin-bottom: 0.1em;
 }
 
-.chatroom-message-avatar-role {
+.boardroom-message-avatar-role {
   display: inline-block;
   font-size: 0.75rem;
   vertical-align: middle;
