--- a/_scss/components/_boardroom-members-sidebar.scss
+++ b/_scss/components/_boardroom-members-sidebar.scss
@@ -1,4 +1,4 @@
-/* boardroom-members-sidebar.css - Compiled from _boardroom-members-sidebar.scss */
+// boardroom-members-sidebar.scss - SCSS version of boardroom-members-sidebar.css
 
 .boardroom-members-sidebar {
   background: #fff;
