--- a/_scss/components/_boardroom-message-avatar-block.scss
+++ b/_scss/components/_boardroom-message-avatar-block.scss
@@ -1,4 +1,4 @@
-/* boardroom-message-avatar-block.css - Ensures avatar and message bubble are always bottom-aligned and spaced correctly */
+// boardroom-message-avatar-block.scss - SCSS version of boardroom-message-avatar-block.css
 
 .boardroom-message-avatar-block {
   align-self: flex-end;
