--- a/_scss/components/_boardroom-message-input.scss
+++ b/_scss/components/_boardroom-message-input.scss
@@ -1,4 +1,4 @@
-/* boardroom-message-input.css - Compiled from _boardroom-message-input.scss */
+// boardroom-message-input.scss - SCSS version of boardroom-message-input.css
 
 .boardroom-message-input {
   color: #6c757d;
