--- a/_scss/components/_boardroom-section.scss
+++ b/_scss/components/_boardroom-section.scss
@@ -1,4 +1,4 @@
-/* boardroom-section.css - Compiled from _boardroom-section.scss */
+// boardroom-section.scss - SCSS version of boardroom-section.css
 
 .boardroom-boardroom-container {
   width: 100%;
