--- a/_scss/components/_boardroom-sidebar-toggle-strip.scss
+++ b/_scss/components/_boardroom-sidebar-toggle-strip.scss
@@ -1,4 +1,4 @@
-/* boardroom-sidebar-toggle-strip.css - Compiled from _boardroom-sidebar-toggle-strip.scss */
+// boardroom-sidebar-toggle-strip.scss - SCSS version of boardroom-sidebar-toggle-strip.css
 
 .boardroom-sidebar-toggle-strip {
   background: #6c757d;
