--- a/_scss/components/_boardroom-utilities.scss
+++ b/_scss/components/_boardroom-utilities.scss
@@ -1,4 +1,4 @@
-/* boardroom-utilities.css - Compiled from _boardroom-utilities.scss */
+// boardroom-utilities.scss - SCSS version of boardroom-utilities.css
 
 #members {
   width: 100%;
