--- a/_scss/components/_boardroom-message-item.scss
+++ b/_scss/components/_boardroom-message-item.scss
@@ -1,4 +1,5 @@
-/* Styles for boardroom-message-item (names and roles below avatars) */
+// boardroom-message-item.scss - SCSS version of boardroom-message-item.css
+
 .boardroom-message-avatar {
   width: 40px;
   height: 40px;
