Started migration to scss

--- a/_sass/components/_boardroom-chat-area.scss
+++ b/_sass/components/_boardroom-chat-area.scss
@@ -1,6 +1,12 @@
 // boardroom-chat-area.scss - SCSS version of boardroom-chat-area.css
 
+// Styles for the boardroom chat area component
 .boardroom-chat-area {
+  @extend .d-flex;
+  @extend .flex-column;
+  @extend .flex-grow-1;
+  // ...additional Bootstrap or custom utility classes as needed
+  // Add more nested styles for child elements if required
   flex-grow: 1;
   display: flex;
   flex-direction: column;
