--- a/_sass/pages/_boardroom.scss
+++ b/_sass/pages/_boardroom.scss
@@ -10,6 +10,7 @@
 @import '../components/boardroom-message-input';
 @import '../components/boardroom-message-avatar-block';
 @import '../components/boardroom-utilities';
+@import '../components/boardroom-sidebar';
 
 // Layout and scrolling fixes for chat area
 html, body {
