Trying out remote theme

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,1 +1,11 @@
+// Bootstrap dependencies - core functions, variables, and mixins
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/variables-dark";
+@import "bootstrap/mixins";
+
+// Bootstrap main SASS file (imports all of Bootstrap)
+// This will now use any overridden variables from base/variables.scss
+@import "bootstrap/bootstrap";
+
 @import "pages/boardroom";
