--- a/_includes/boardroom/members-sidebar.html
+++ b/_includes/boardroom/members-sidebar.html
@@ -1,13 +1,13 @@
-<aside id="sidebarContainer" class="boardroom-sidebar-container">
-  <nav id="sidebarToggleStrip" class="boardroom-sidebar-toggle-strip" aria-label="Sidebar Toggle">
+<aside id="membersSidebarContainer" class="boardroom-members-sidebar-container"></aside>
+  <nav id="membersSidebarToggleStrip" class="boardroom-members-sidebar-toggle-strip" aria-label="Sidebar Toggle">
     <button id="toggleMembersBtn" class="boardroom-toggle-members-btn" title="Toggle Members" aria-label="Toggle Members">
       <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/people.svg" alt="Users" width="20" height="20" class="icon-white" />
     </button>
     <button class="boardroom-other-action-btn" title="Other Action" aria-label="Other Action">
       <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/gear.svg" alt="Settings" width="20" height="20" class="icon-white" />
     </button>
-    <span class="boardroom-sidebar-strip-spacer"></span>
-    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/chevron-double-left.svg" alt="Collapse Sidebar" class="boardroom-sidebar-toggle-icon icon-white" id="sidebarToggleIcon" width="18" height="18" />
+    <span class="boardroom-members-sidebar-strip-spacer"></span>
+    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/chevron-double-left.svg" alt="Collapse Sidebar" class="boardroom-members-sidebar-toggle-icon icon-white" id="membersSidebarToggleIcon" width="18" height="18" />
   </nav>
   <aside id="membersSidebar" class="boardroom-members-sidebar d-flex flex-column" aria-label="Members Sidebar">
     <header class="boardroom-members-header d-flex align-items-center px-3 py-2 border-bottom">
