--- a/_sass/components/_boardroom-main-row.scss
+++ b/_sass/components/_boardroom-main-row.scss
@@ -7,6 +7,10 @@
   min-height: 0;
   margin: 0;
   flex: 1 1 auto;
+    @extend .flex-grow-1;
+  @extend .d-flex;
+  @extend .flex-row;
+  @extend .min-vh-100;
 }
 
 .boardroom-sidebar-container {
