--- a/_sass/components/_boardroom-message-input.scss
+++ b/_sass/components/_boardroom-message-input.scss
@@ -30,18 +30,31 @@
   font-size: 1.25rem;
   margin-left: 1rem;
   margin-right: 1rem;
+  border: 1px solid #dee2e6;
+  border-radius: 0.375rem;
+  padding: 0.5rem 1rem;
+  background: #fff;
+  color: #212529;
 }
 
-.boardroom-message-input-attach {
-  margin-left: 0.25rem;
-  color: #6c757d;
-}
-
-.boardroom-message-input-emoji {
+.boardroom-message-input-attach,
+.boardroom-message-input-emoji,
+.boardroom-message-input-send {
+  background: none;
+  border: none;
+  padding: 0.25rem;
   margin-left: 0.75rem;
   color: #6c757d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .boardroom-message-input-send {
-  margin-left: 0.75rem;
+  background: #0d6efd;
+  color: #fff;
+  border-radius: 0.375rem;
+  padding: 0.25rem 0.75rem;
+  margin-left: 1rem;
 }
