--- a/_sass/components/_boardroom-utilities.scss
+++ b/_sass/components/_boardroom-utilities.scss
@@ -11,9 +11,14 @@
   padding: 0;
 }
 
-#message-input-control {
-  font-size: 0.875rem;
+.boardroom-message-input-field {
+  font-size: 1.25rem;
   font-family: inherit;
+  color: #212529;
+  background: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.375rem;
+  padding: 0.5rem 1rem;
 }
 
 .icon-white {
