--- a/_sass/pages/boardroom/members-sidebar/_header.scss
+++ b/_sass/pages/boardroom/members-sidebar/_header.scss
@@ -1,11 +1,11 @@
 // SCSS partial for boardroom members-sidebar header component
 
 .boardroom-members-header {
-  @extend d-flex;
-  @extend justify-content-between;
-  @extend align-items-center;
+  @include display-flex;
+  @include justify-content(space-between);
+  @include align-items(center);
 }
 
 .boardroom-members-title {
-  @extend mb-0;
+  @include margin-bottom(0);
 }
