--- a/_sass/pages/boardroom/section/_main.scss
+++ b/_sass/pages/boardroom/section/_main.scss
@@ -1,32 +1,32 @@
 // SCSS partial for boardroom section component (migrated from _boardroom-section.scss)
 
 .boardroom-boardroom-container {
-  @extend w-100;
-  @extend min-vh-100;
-  @extend h-100;
-  @extend p-0;
-  @extend box-sizing-border-box;
-  @extend d-flex;
-  @extend flex-column;
+  @include width(100%);
+  @include min-viewport-height(100);
+  @include height(100%);
+  @include padding(0);
+  @include box-sizing(border-box);
+  @include display-flex;
+  @include flex-direction(column);
 }
 
 .boardroom-section {
-  @extend bg-white;
-  @extend flex-grow-1;
-  @extend d-flex;
-  @extend flex-column;
-  @extend h-100;
-  @extend min-vh-100;
+  @include background-color($white);
+  @include flex(1 1 auto);
+  @include display-flex;
+  @include flex-direction(column);
+  @include height(100%);
+  @include min-viewport-height(100);
 }
 
 .boardroom-container-fluid {
-  @extend pt-0;
-  @extend pb-0;
-  @extend ps-0;
-  @extend pe-0;
-  @extend flex-grow-1;
-  @extend d-flex;
-  @extend flex-column;
-  @extend h-100;
-  @extend min-vh-100;
+  @include padding-top(0);
+  @include padding-bottom(0);
+  @include padding-left(0);
+  @include padding-right(0);
+  @include flex(1 1 auto);
+  @include display-flex;
+  @include flex-direction(column);
+  @include height(100%);
+  @include min-viewport-height(100);
 }
