--- a/_sass/pages/boardroom/chat-area/_footer.scss
+++ b/_sass/pages/boardroom/chat-area/_footer.scss
@@ -1,59 +1,62 @@
 // SCSS partial for boardroom chat-area footer component
 
 .boardroom-message-input {
-  @extend text-secondary;
-  @extend d-flex;
-  @extend align-items-center;
-  @extend pr-4;
-  @extend pt-4;
-  @extend mt-2;
-  @extend flex-shrink-0;
-  @extend position-sticky;
-  @extend bg-white;
-  @extend bottom-0;
-  @extend z-1;
+  @include color($secondary);
+  @include display-flex;
+  @include align-items(center);
+  @include padding-right(1.5rem); // pr-4 = 1.5rem
+  @include padding-top(1.5rem); // pt-4 = 1.5rem
+  @include margin-top(0.5rem); // mt-2 = 0.5rem
+  @include flex-shrink(0);
+  @include position(sticky);
+  @include background-color($white);
+  @include bottom(0);
+  @include z-index(1);
 }
 
 .boardroom-message-input-avatar {
-  @extend w-100;
-  @extend h-100;
-  @extend ratio-1x1;
-  @extend object-fit-cover;
-  @extend rounded-circle;
-  @extend d-block;
-  @extend overflow-hidden;
+  @include width(100%);
+  @include height(100%);
+  @include aspect-ratio(1, 1);
+  @include object-fit(cover);
+  @include border-radius(50%);
+  @include display-block;
+  @include overflow(hidden);
 }
 
 .boardroom-message-input-field {
-  @extend flex-grow-1;
-  @extend fs-4;
-  @extend ms-4;
-  @extend me-4;
-  @extend border;
-  @extend rounded;
-  @extend p-3;
-  @extend bg-white;
-  @extend text-dark;
+  @include flex-grow(1);
+  @include font-size(1.5rem); // fs-4 = 1.5rem
+  @include margin-left(1.5rem); // ms-4 = 1.5rem
+  @include margin-right(1.5rem); // me-4 = 1.5rem
+  @include border-width(1px);
+  @include border-style(solid);
+  @include border-color($border-color);
+  @include border-radius(0.375rem);
+  @include padding(1rem); // p-3 = 1rem
+  @include background-color($white);
+  @include color($dark);
 }
 
 .boardroom-message-input-attach,
 .boardroom-message-input-emoji,
 .boardroom-message-input-send {
-  @extend bg-transparent;
-  @extend border-0;
-  @extend p-2;
-  @extend ms-3;
-  @extend text-secondary;
-  @extend d-flex;
-  @extend align-items-center;
-  @extend justify-content-center;
-  @extend cursor-pointer;
+  @include background-color(transparent);
+  @include border-width(0);
+  @include padding(0.5rem); // p-2 = 0.5rem
+  @include margin-left(1rem); // ms-3 = 1rem
+  @include color($secondary);
+  @include display-flex;
+  @include align-items(center);
+  @include justify-content(center);
+  @include cursor(pointer);
 }
 
 .boardroom-message-input-send {
-  @extend bg-primary;
-  @extend text-white;
-  @extend rounded;
-  @extend px-3;
-  @extend ms-4;
+  @include background-color($primary);
+  @include color($white);
+  @include border-radius(0.375rem);
+  @include padding-left(1rem); // px-3 = 1rem
+  @include padding-right(1rem);
+  @include margin-left(1.5rem); // ms-4 = 1.5rem
 }
